--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Tony Montana</title>
+		<title>Salvi Pascual</title>
 		<meta name="description" content="Creative CV is a HTML resume template for professionals. Built with Bootstrap 4, Now UI Kit and FontAwesome, this modern and responsive design template is perfect to showcase your portfolio, skils and experience."/>
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
@@ -17,7 +17,7 @@
 			<div class="profile-page sidebar-collapse">
 				<nav class="navbar navbar-expand-lg fixed-top navbar-transparent bg-primary" color-on-scroll="400">
 					<div class="container">
-						<div class="navbar-translate"><a class="navbar-brand" href="#" rel="tooltip">Tony Montana</a>
+						<div class="navbar-translate"><a class="navbar-brand" href="#" rel="tooltip">Salvi Pascual</a>
 							<button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-bar bar1"></span><span class="navbar-toggler-bar bar2"></span><span class="navbar-toggler-bar bar3"></span></button>
 						</div>
 						<div class="collapse navbar-collapse justify-content-end" id="navigation">
@@ -37,11 +37,11 @@
 			<div class="profile-page">
 				<div class="wrapper">
 					<div class="page-header page-header-small" filter-color="green">
-						<div class="page-header-image" data-parallax="true" style="background-image: url('images/background/option1.jpg');"></div>
+						<div class="page-header-image" data-parallax="true" style="background-image: url('images/background/option3.jpg');"></div>
 						<div class="container">
 							<div class="content-center">
 								<div class="cc-profile-image"><a href="#"><img src="images/profile.jpg" alt="Image"/></a></div>
-								<div class="h2 title">Tony Montana</div>
+								<div class="h2 title">Salvi Pascual</div>
 								<p class="category text-white">Full Stack Web Developer</p>
 								<a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a>
 							</div>
@@ -49,10 +49,10 @@
 						<div class="section">
 							<div class="container">
 								<div class="button-container">
-									<a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Check my code">
+									<a class="btn btn-default btn-round btn-lg btn-icon" href="https://github.com/salvipascual" target="_blank" rel="tooltip" title="Check my code">
 										<i class="fa fa-github"></i>
 									</a>
-									<a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me">
+									<a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/salvipascual/" target="_blank" rel="tooltip" title="Follow me">
 										<i class="fa fa-linkedin"></i>
 									</a>
 								</div>
@@ -68,7 +68,7 @@
 							<div class="col-lg-6 col-md-12">
 								<div class="card-body">
 									<div class="h4 mt-0 title">About</div>
-									<p>Hello! I am Tony Montana. I love coding! I am a Full Stack Web Developer, Graphic Designer and Photographer. I love swiming and taking the soon at the beach. I am a big fan of Smart Tech, very hardworker and excited about learning any new languages and traveling.</p>
+									<p>University professor, software developer, systems architect, and technology trailblazer for social good. His work has an immediate and positive affect on thousands of people internationally, and he has been nationally recognized by the press and media. He earned his master degree in Computer Science from Florida International University and continues to teach and inspire future technology creators.</p>
 								</div>
 							</div>
 							<div class="col-lg-6 col-md-12">
@@ -76,11 +76,11 @@
 									<div class="h4 mt-0 title">Basic Information</div>
 									<div class="row mt-3">
 										<div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-										<div class="col-sm-8">tonymontana@techlaunch.io</div>
+										<div class="col-sm-8">salvi.pascual@gmail.com</div>
 									</div>
 									<div class="row mt-3">
 										<div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-										<div class="col-sm-8">305-111-0011</div>
+										<div class="col-sm-8">305-457-1656</div>
 									</div>
 									<div class="row mt-3">
 										<div class="col-sm-4"><strong class="text-uppercase">Location:</strong></div>
@@ -88,7 +88,7 @@
 									</div>
 									<div class="row mt-3">
 										<div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
-										<div class="col-sm-8">English, Spanish, French</div>
+										<div class="col-sm-8">English & Spanish</div>
 									</div>
 								</div>
 							</div>
@@ -105,30 +105,30 @@
 								<div class="col-md-6">
 									<div class="progress-container progress-primary"><span class="progress-badge">HTML5 & CSS3</span>
 										<div class="progress">
-											<div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
+											<div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 89%;"></div><span class="progress-value">89%</span>
 										</div>
 									</div>
 								</div>
 								<div class="col-md-6">
 									<div class="progress-container progress-primary"><span class="progress-badge">JavaScript</span>
 										<div class="progress">
-											<div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
+											<div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 82%;"></div><span class="progress-value">82%</span>
 										</div>
 									</div>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-6">
-									<div class="progress-container progress-primary"><span class="progress-badge">Apache2 & PHP</span>
+									<div class="progress-container progress-primary"><span class="progress-badge">PHP & Apache2</span>
 										<div class="progress">
-											<div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
+											<div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 96%;"></div><span class="progress-value">96%</span>
 										</div>
 									</div>
 								</div>
 								<div class="col-md-6">
-									<div class="progress-container progress-primary"><span class="progress-badge">React</span>
+									<div class="progress-container progress-primary"><span class="progress-badge">Android</span>
 										<div class="progress">
-											<div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
+											<div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 66%;"></div><span class="progress-value">66%</span>
 										</div>
 									</div>
 								</div>
@@ -137,14 +137,14 @@
 								<div class="col-md-6">
 									<div class="progress-container progress-primary"><span class="progress-badge">Bootstrap</span>
 										<div class="progress">
-											<div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
+											<div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 98%;"></div><span class="progress-value">98%</span>
 										</div>
 									</div>
 								</div>
 								<div class="col-md-6">
 									<div class="progress-container progress-primary"><span class="progress-badge">WordPress</span>
 										<div class="progress">
-											<div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">70%</span>
+											<div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 82%;"></div><span class="progress-value">82%</span>
 										</div>
 									</div>
 								</div>
@@ -162,23 +162,34 @@
 								<div class="row">
 									<div class="col-md-6">
 										<div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-											<a href="#web-development">
+											<a href="https://apretaste.org" target="_blank">
 												<figure class="cc-effect">
 													<img src="images/projects/1.jpg" alt="Image"/>
 													<figcaption>
-														<div class="h4">Check the Bitcoin prices</div>
-														<p>HTML5 + CSS3 + JavaScript</p>
+														<div class="h4">Apretaste</div>
+														<p>Android + HTML5 + PHP</p>
 													</figcaption>
 												</figure>
 											</a>
 										</div>
 										<div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-											<a href="#web-development">
+											<a href="http://piropazo.com" target="_blank">
 												<figure class="cc-effect">
 													<img src="images/projects/2.jpg" alt="Image"/>
 													<figcaption>
-														<div class="h4">Weather Channel</div>
-														<p>React</p>
+														<div class="h4">Piropazo</div>
+														<p>Android + HTML5 + PHP</p>
+													</figcaption>
+												</figure>
+											</a>
+										</div>
+										<div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+											<a href="http://objectdb.salvipascual.com" target="_blank">
+												<figure class="cc-effect">
+													<img src="images/projects/6.jpg" alt="Image"/>
+													<figcaption>
+														<div class="h4">Object DB</div>
+														<p>PHP</p>
 													</figcaption>
 												</figure>
 											</a>
@@ -186,23 +197,34 @@
 									</div>
 									<div class="col-md-6">
 										<div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-											<a href="#web-development">
+											<a href="http://pizarra.apretaste.org" target="_blank">
 												<figure class="cc-effect">
 													<img src="images/projects/3.jpg" alt="Image"/>
 													<figcaption>
-														<div class="h4">Food Order Online</div>
-														<p>HTML5 + PHP</p>
+														<div class="h4">Pizarra</div>
+														<p>Android + HTML5 + PHP</p>
 													</figcaption>
 												</figure>
 											</a>
 										</div>
 										<div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-											<a href="#web-development">
+											<a href="http://escuela.apretaste.org" target="_blank">
 												<figure class="cc-effect">
 													<img src="images/projects/4.jpg" alt="Image"/>
 													<figcaption>
-														<div class="h4">Online Shoe Store</div>
-														<p>WordPress</p>
+														<div class="h4">Escuela</div>
+														<p>Android + HTML5 + PHP</p>
+													</figcaption>
+												</figure>
+											</a>
+										</div>
+										<div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+											<a href="http://cubacrece.com" target="_blank">
+												<figure class="cc-effect">
+													<img src="images/projects/5.jpg" alt="Image"/>
+													<figcaption>
+														<div class="h4">Cuba Crece</div>
+														<p>Social Meetups</p>
 													</figcaption>
 												</figure>
 											</a>
@@ -221,15 +243,15 @@
 						<div class="row">
 							<div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
 								<div class="card-body cc-education-header">
-									<p>2019</p>
-									<div class="h5">Diploma</div>
+									<p>2012</p>
+									<div class="h5">Master's Degree</div>
 								</div>
 							</div>
 							<div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
 								<div class="card-body">
-									<div class="h5">Web Developer Diploma</div>
-									<p class="category">TechLaunch</p>
-									<p>I graduated from TechLaunch a coding Bootcamp in Miami, where I studied for nine months how to build websites using backend and frontend technology, and how to plan the development of large scale web applications.</p>
+									<div class="h5">Master of Computer Science</div>
+									<p class="category">Florida International University</p>
+									<p>I graduated from Florida International University, localted in Miami, where I studied software architecture to create large scale applications.</p>
 								</div>
 							</div>
 						</div>
@@ -238,54 +260,15 @@
 						<div class="row">
 							<div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
 								<div class="card-body cc-education-header">
-									<p>2009 - 2013</p>
+									<p>2009</p>
 									<div class="h5">Bachelor's Degree</div>
 								</div>
 							</div>
 							<div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
 								<div class="card-body">
-									<div class="h5">Bachelor of Computer Science</div>
-									<p class="category">University of Computer Science</p>
-									<p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="section" id="reference">
-				<div class="container cc-reference">
-					<div class="h4 mb-4 text-center title">References</div>
-					<div class="card" data-aos="zoom-in">
-						<div class="carousel slide" id="cc-Indicators" data-ride="carousel">
-							<ol class="carousel-indicators">
-								<li class="active" data-target="#cc-Indicators" data-slide-to="0"></li>
-								<li data-target="#cc-Indicators" data-slide-to="1"></li>
-							</ol>
-							<div class="carousel-inner">
-								<div class="carousel-item active">
-									<div class="row">
-										<div class="col-lg-2 col-md-3 cc-reference-header">
-											<img src="images/references/1.jpg" alt="Image"/>
-											<div class="h5 pt-2">Ibis Fonte</div>
-											<p class="category">Professor</p>
-										</div>
-										<div class="col-lg-10 col-md-9">
-											<p>Habitasse venenatis commodo tempor eleifend arcu sociis sollicitudin ante pulvinar ad, est porta cras erat ullamcorper volutpat metus duis platea convallis, tortor primis ac quisque etiam luctus nisl nullam fames. Ligula purus suscipit tempus nascetur curabitur donec nam ullamcorper, laoreet nullam mauris dui aptent facilisis neque elementum ac, risus semper felis parturient fringilla rhoncus eleifend.</p>
-										</div>
-									</div>
-								</div>
-								<div class="carousel-item">
-									<div class="row">
-										<div class="col-lg-2 col-md-3 cc-reference-header">
-											<img src="images/references/2.jpg" alt="Image"/>
-											<div class="h5 pt-2">Salvi Pascual</div>
-											<p class="category">Professor</p>
-										</div>
-										<div class="col-lg-10 col-md-9">
-											<p>Habitasse venenatis commodo tempor eleifend arcu sociis sollicitudin ante pulvinar ad, est porta cras erat ullamcorper volutpat metus duis platea convallis, tortor primis ac quisque etiam luctus nisl nullam fames. Ligula purus suscipit tempus nascetur curabitur donec nam ullamcorper, laoreet nullam mauris dui aptent facilisis neque elementum ac, risus semper felis parturient fringilla rhoncus eleifend.</p>
-										</div>
-									</div>
+									<div class="h5">Bachelor in Computer Sience</div>
+									<p class="category">CUJAE</p>
+									<p>I graduated from CUJAE, one of the most renown technical universities in Cuba, where I learned how to build websites using backend and frontend technology and desktop apps.</p>
 								</div>
 							</div>
 						</div>
@@ -306,9 +289,9 @@
 													<p class="mb-0"><strong>Location </strong></p>
 													<p class="pb-2">Miami, Florida</p>
 													<p class="mb-0"><strong>Phone</strong></p>
-													<p class="pb-2">+1718-111-0011</p>
+													<p class="pb-2">305-457-1656</p>
 													<p class="mb-0"><strong>Email</strong></p>
-													<p>tonymontana@techlaunch.io</p>
+													<p>salvi.pascual@gmail.com</p>
 												</div>
 											</div>
 										</div>
@@ -322,14 +305,14 @@
 		</div>
 		<footer class="footer">
 			<div class="container text-center">
-				<a class="cc-facebook btn btn-link" href="#">
+				<a class="cc-facebook btn btn-link" href="https://github.com/salvipascual" target="_blank">
 					<i class="fa fa-github fa-2x " aria-hidden="true"></i>
 				</a>
-				<a class="cc-twitter btn btn-link " href="#">
+				<a class="cc-twitter btn btn-link " href="https://www.linkedin.com/in/salvipascual/" target="_blank">
 					<i class="fa fa-linkedin fa-2x " aria-hidden="true"></i>
 				</a>
 			</div>
-			<div class="h4 title text-center">Tony Montana</div>
+			<div class="h4 title text-center">Salvi Pascual</div>
 			<div class="text-center text-muted">
 				<p>I love to code</p>
 			</div>
